--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -5,12 +5,19 @@ body {
 }
 
 img {
-  width: 25%;
-  height: 25%;
+  width: 20%;
+  height: 20%;
+}
+
+h1,
+span,
+button:hover,
+.result,
+.message {
+  color: chocolate;
 }
 
 h1 {
-  color: chocolate;
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 1em;
@@ -18,7 +25,8 @@ h1 {
 
 label,
 select,
-option {
+option,
+.result {
   color:#595260;
 }
 
@@ -56,7 +64,20 @@ button {
 }
 
 button:hover {
-  color: chocolate;
   background-color: antiquewhite;
   cursor: pointer;
+}
+
+.result {
+  font-weight: bold;
+  font-size: 3rem;
+  margin-top: 2.5rem;
+  margin-bottom: 1.45rem;
+}
+
+.message {
+  margin: 1.5rem auto;
+  padding: 0;
+  font-size: 1.5rem;
+  font-style: italic;
 }
