--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -70,7 +70,7 @@ button:hover {
 
 .result {
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 2.7rem;
   margin-top: 2.5rem;
   margin-bottom: 1.45rem;
 }
@@ -78,6 +78,13 @@ button:hover {
 .message {
   margin: 1.5rem auto;
   padding: 0;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-style: italic;
+}
+
+footer {
+  position: absolute;
+  left: 1.5em;
+  bottom: 0;
+  margin-left: auto;
 }
